# Data-Compression-App

./: .gitignore  Arbore.cpp  Arbore.h  CMakeLists.txt  Lista.cpp  Lista.h  README.md  Roadmap.md  config.h  main.cpp
.github/: act-history.json
.github/workflows/: build.yml
Aplicatie_Java/: Compresor_Huffman.xml
Cod_sursa_Java/: MeniuPrincipal.form  MeniuPrincipal.java
Cod_sursă_Java/: MeniuPrincipal.java
Compresor/: Lista.h
Compresor_Huffman/: CMakeLists.txt  Lista.cpp  Lista.h  main.cpp
Decompresor/: Lista.h
Decompresor_Huffman/: CMakeLists.txt  Lista.cpp  main.cpp
Java_App/: Huffman.xml  Huffman_Compiler.xml
Java_Source/: MeniuPrincipal.form  MeniuPrincipal.java
